--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Kanal Informasi IF20 UNS</title>
         <link rel="stylesheet" href="lib/spectre.min.css">
         <link rel="stylesheet" href="lib/spectre-icons.min.css">
+        <link rel="stylesheet" href="styles.css">
         <script src="lib/vue.min.js"></script>
         <script src="lib/marked.min.js"></script>
         <script src="jarkoman.js"></script>
@@ -31,7 +32,7 @@
                     <div v-if="selectedInformation !== null">
                         <h5>{{ selectedInformation.category }} / {{ selectedInformation.title }}</h5>
                         <div class="columns" style="margin-bottom: 1rem">
-                            <div v-for="item in selectedInformation.items" class="column col-4 col-sm-12" style="margin-bottom: 1rem">
+                            <div v-for="item in selectedInformation.items" class="column col-6 col-md-12" style="margin-bottom: 1rem">
                                 <div class="card" style="height: 100%">
                                     <div class="card-body" v-html="marked(item)"></div>
                                 </div>
