--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta name="viewport" content="width=device-width; initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Kanal Informasi IF20 UNS</title>
+        <link rel="manifest" href="manifest.json">
         <link rel="stylesheet" href="lib/spectre.min.css">
         <link rel="stylesheet" href="lib/spectre-icons.min.css">
         <link rel="stylesheet" href="styles.css">
