--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <h5>Informatika UNS Angkatan 2020</h5>
                 </header>
                 <div class="container grid-xl" style="margin-top: 1.5rem; margin-bottom: 1.5rem">
+                    <div class="text-gray text-bold" style="margin-bottom: 1rem">Terakhir diperbarui {{ lastUpdatedDelta }} yang lalu pada {{ lastUpdated }}</div>
                     <ul class="nav" style="margin-bottom: 1rem">
                         <li v-for="(category, id) in categories">
                             <b>{{ category }}</b>
